# topstar_ros2

./: .gitignore  README.md  README.zh-CN.md  devpc_setup.sh  h2_points.json  register_wireguard.sh  robots_wg.conf  setup.sh  setup_default.sh  setup_local.sh  setup_r1.sh  setup_wg_r1.sh  setup_wg_r2.sh  setup_wired.sh  setup_wired_r1.sh  zip_redeploy.sh
.claude/: settings.local.json
cyclonedds_ws/src/topstar/topstar_api/: CMakeLists.txt  package.xml
cyclonedds_ws/src/topstar/topstar_api/msg/: RequestIdentity.msg
cyclonedds_ws/src/topstar/topstar_hg/: CMakeLists.txt  package.xml
cyclonedds_ws/src/topstar/topstar_hg/msg/: BmsCmd.msg  BmsState.msg  GripperCmd.msg  GripperState.msg  HandCmd.msg  HandMotorCmd.msg  HandMotorState.msg  HandState.msg
cyclonedds_ws/src/topstar/topstar_hg/srv/: GetArmFK.srv  GetArmIK.srv
docs/: FOUR_WHEEL_STEERING_KINEMATICS.md  H1_ISAAC_SIM_GUIDE.md  H1_MUJOCO_CONTROL_FIXES.md  H1_ROS2_SIMULATION_GUIDE.md  H1_UPPER_BODY_JOINT_MAPPING.md  H2_EXAMPLES_TUTORIAL.zh-CN.md  README_h1.md  ROBOT_NETWORK_SETUP.md  UBUNTU24_SETUP.md  motor_gui_tutorial_zh.md  zeroing_update.md
example/: build_h1.sh  h1_fk_ik_demo.py  h1_tune_env.sh  h2_isaac_jog.py  h2_lowcmd_gui.py  h2_motor_plot.py  h2_rl_runner_ros2.py  points.json  run_motor_plot.sh  sine_wave_config.yaml  test_jog_commands.sh  test_steering_stability.sh  upper_body_play_ros2.py  upper_body_record_ros2.py
example/isaac_bridge/: h1_isaac_ros2_bridge.py  h1_isaac_sim.py  h2_isaac_ros2_bridge.py  h2_isaac_sim.py  launch_h1_bridge.sh  launch_h2_bridge.sh  make_abs_urdf.py  make_abs_urdf_h2.py  topstar_h1.py
example/robust_v1/: deploy.yaml  policy.onnx
example/src/: CMakeLists.txt  package.xml
example/src/config/h1/: robot_config.json
example/src/include/: gamepad.hpp
example/src/include/common/: base_client.hpp  motor_crc_hg.h  patch.hpp  time_tools.hpp
example/src/include/h1/: h1.hpp
example/src/include/h2/: h2.hpp  h2_arm_action_client.hpp  h2_loco_client.hpp
example/src/src/: mujoco_ros2_bridge.cpp  read_low_state_hg.cpp
example/src/src/common/: motor_crc_hg.cpp
example/src/src/h1/launch/: h1_sim.launch.py
example/src/src/h1/topstar_h1/: h1_base.py  h1_bridge.py  h1_drive_example.py  h1_ros2_node.py  h1_send_velocity.py  h1_upper_body.py  h1_upper_body_jog.py  joint_defs.py  mock_xapi.py  x5_monitor.py
example/src/src/h1/topstar_h1/backends/: __init__.py  base.py  isaac.py  mujoco.py  xapi.py
example/src/src/h2/high_level/: h2_arm_action_example.cpp  h2_arm_sdk_dds_example.cpp  h2_loco_client_example.cpp
example/src/src/h2/lowlevel/: h2_ankle_swing_example.cpp  h2_joint_oscillation_example.cpp  h2_low_level_example.cpp  h2_motor_thermal_example.cpp  sine_wave_example.cpp
example/src/src/h2/ls_hand/: h2_ls_hand_example.cpp
example/src/urdf/h1/: Topstar.urdf  _tmp_h1_flat.urdf  _tmp_h1_mujoco.urdf  little_top.urdf
example/src/urdf/h1/meshes/: Robot_Body_Movement_Link.STL  Robot_Body_Rotation_Link.STL  Robot_Head_Rotation_Link.STL  Robot_Head_Tonod_Link.STL  Robot_Left_Hand_1_Link.STL  Robot_Left_Hand_2_Link.STL  Robot_Left_Hand_3_Link.STL  Robot_Left_Hand_4_Link.STL  Robot_Left_Hand_5_Link.STL  Robot_Left_Hand_6_Link.STL  Robot_Left_Hand_base_Link.STL  Robot_Right_Hand_1_Link.STL  Robot_Right_Hand_2_Link.STL  Robot_Right_Hand_3_Link.STL  Robot_Right_Hand_4_Link.STL  Robot_Right_Hand_5_Link.STL  Robot_Right_Hand_6_Link.STL  Wheel_Rotation_1_1_Link.STL  Wheel_Rotation_1_2_Link.STL  Wheel_Rotation_2_1_Link.STL  Wheel_Rotation_2_2_Link.STL  Wheel_Rotation_3_1_Link.STL  Wheel_Rotation_3_2_Link.STL  Wheel_Rotation_4_1_Link.STL  Wheel_Rotation_4_2_Link.STL  base_link.STL
example/topstar_h2/: CMakeLists.txt  package.xml
