<?xml version="1.0"?>
<?xml-model href="" schematypens=""?>
<package format="3">
  <name>topstar_ros2_example</name>
  <version>0.0.0</version>
  <description>Topstar H1 ROS2 Python examples</description>
  <maintainer email="topstar@topstar.com">Topstar</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>topstar_hg</depend>
  <depend>topstar_api</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
