<?xml version="1.0"?>
<package format="3">
  <name>topstar_ros2_h2_example</name>
  <version>0.0.0</version>
  <description>Topstar H2 ROS2 C++ examples split from topstar_ros2_example</description>
  <maintainer email="topstar@topstar.com">Topstar</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>topstar_hg</depend>
  <depend>topstar_api</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosbag2_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>